--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,29 @@
 .header {
-  text-align: center;
-  background-color: #9EC4C5;
+  display: flex;
+  padding: 32px;
+}
+
+.welcome {
+  width: 50%;
+  float: left;
+  text-align: left;
+}
+
+.account {
+  width: 50%;
+  text-align: right;
+  margin: auto 0;
 }
 
 .slide {
-  margin: 64px;
+  margin: 32px;
+}
+
+.carousel-container {
+  width: 90%;
+  padding: 1px;
+  background-color: grey;
+  margin: auto;
 }
 
 .carousel-item {
@@ -13,15 +32,15 @@
 }
 
 .cards {
-  width: 100%;
-  text-align: center;
+  width: 80%;
   display: flex;
+  margin: 64px auto auto auto;
 }
 
 .card {
-  width: 100px;
-  margin: 64px;
-  display: inline-block;
+  width: 24%;
+  margin: 0 1%;
+  height: 375px;
 }
 
 .card img {
