--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,8 +10,14 @@
 
 <body>
   <div class="header">
-    <h1>Welcome to Baby Thrift</h1>
-    <h3>Buy and sell your second hand baby items!</h3>
+    <div class="welcome">
+      <h1>Welcome to Baby Thrift</h1>
+      <h3>Buy and sell your second hand baby items!</h3>
+    </div>
+    <div class="account">
+      <h6>Sign Up</h6>
+      <h6>Log In</h6>
+    </div>
   </div>
 
   <!-- Nav bar -->
@@ -25,60 +31,62 @@
 
 
   <!-- Carousel -->
-  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="images/baby1.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+  <div class="carousel-container">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/baby1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/baby2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/baby3.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+          </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="images/baby2.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="images/baby3.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-        </div>
-      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
   </div>
 
   <!-- Cards -->
   <div class="cards">
 
     <!-- Clothing -->
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img style="background-image: url('images/clothes.jpg')" class="card-img-top" alt="">
       <div class="card-body">
         <h5 class="card-title">Clothing</h5>
-        <p class="card-text">Shop our excellent selection of clothing items!</p>
+        <p class="card-text">Shop our excellent selection of clothing!</p>
         <a href="#" class="btn btn-primary">Browse Clothing</a>
       </div>
     </div>
 
     <!-- Toys -->
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img style="background-image: url('images/toys.jpg')" class="card-img-top" alt="">
       <div class="card-body">
         <h5 class="card-title">Toys</h5>
@@ -88,7 +96,7 @@
     </div>
 
     <!-- Furniture -->
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img style="background-image: url('images/furniture.jfif')" class="card-img-top" alt="">
       <div class="card-body">
         <h5 class="card-title">Furniture</h5>
@@ -98,7 +106,7 @@
     </div>
 
     <!-- Strollers -->
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img style="background-image: url('images/stroller.jpg')" class="card-img-top" alt="">
       <div class="card-body">
         <h5 class="card-title">Strollers</h5>
