--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,66 +1,5 @@
 <%- include('partials/header') %>
 
-<<<<<<< HEAD
-<head>
-  <meta charset="utf-8">
-  <title>Baby Thrift</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/bootstrap.css">
-</head>
-
-<body>
-  <div class="header">
-    <div class="welcome">
-      <h1>Welcome to Baby Thrift</h1>
-      <h3>Buy and sell your second hand baby items!</h3>
-    </div>
-    <div class="account">
-      <h6>Sign Up</h6>
-      <h6>Log In</h6>
-    </div>
-  </div>
-
-  <!-- Nav bar -->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="#">Home</a></li>
-      <li class="breadcrumb-item"><a href="#">Next Page</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Next Next Page</li>
-    </ol>
-  </nav>
-
-
-  <!-- Carousel -->
-  <div class="carousel-container">
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="images/baby1.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/baby2.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/baby3.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-          </div>
-        </div>
-=======
 <!-- Carousel -->
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -88,7 +27,6 @@
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
->>>>>>> da09c8ec98cf59de9a117e9ad396a86cf54e6ec6
       </div>
       <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -111,26 +49,6 @@
 </div>
 
 
-<<<<<<< HEAD
-    <!-- Clothing -->
-    <div class="card">
-      <img style="background-image: url('images/clothes.jpg')" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Clothing</h5>
-        <p class="card-text">Shop our excellent selection of clothing!</p>
-        <a href="#" class="btn btn-primary">Browse Clothing</a>
-      </div>
-    </div>
-
-    <!-- Toys -->
-    <div class="card">
-      <img style="background-image: url('images/toys.jpg')" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Toys</h5>
-        <p class="card-text">Explore safe, clean, and stimulating toys!</p>
-        <a href="#" class="btn btn-primary">Browse Toys</a>
-      </div>
-=======
 <!-- Cards -->
 <div class="cards">
 
@@ -140,50 +58,27 @@
     <div class="card-body">
       <h5 class="card-title">Clothing</h5>
       <p class="card-text">Shop our excellent selection of clothing items!</p>
-      <a href="#" class="btn btn-primary">Browse Clothing</a>
->>>>>>> da09c8ec98cf59de9a117e9ad396a86cf54e6ec6
+      <a href="/shop/Clothing" class="btn btn-primary">Browse Clothing</a>
     </div>
   </div>
 
-<<<<<<< HEAD
-    <!-- Furniture -->
-    <div class="card">
-      <img style="background-image: url('images/furniture.jfif')" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Furniture</h5>
-        <p class="card-text">Find exactly what you're looking for!</p>
-        <a href="#" class="btn btn-primary">Browse Furniture</a>
-      </div>
-=======
   <!-- Toys -->
   <div class="card" style="width: 18rem;">
     <img style="background-image: url('images/toys.jpg')" class="card-img-top" alt="">
     <div class="card-body">
       <h5 class="card-title">Toys</h5>
       <p class="card-text">Explore safe, clean, and stimulating toys!</p>
-      <a href="#" class="btn btn-primary">Browse Toys</a>
->>>>>>> da09c8ec98cf59de9a117e9ad396a86cf54e6ec6
+      <a href="/shop/Toys" class="btn btn-primary">Browse Toys</a>
     </div>
   </div>
 
-<<<<<<< HEAD
-    <!-- Strollers -->
-    <div class="card">
-      <img style="background-image: url('images/stroller.jpg')" class="card-img-top" alt="">
-      <div class="card-body">
-        <h5 class="card-title">Strollers</h5>
-        <p class="card-text">Go mobile with one of our strollers!</p>
-        <a href="#" class="btn btn-primary">Browse Strollers</a>
-      </div>
-=======
   <!-- Furniture -->
   <div class="card" style="width: 18rem;">
     <img style="background-image: url('images/furniture.jfif')" class="card-img-top" alt="">
     <div class="card-body">
       <h5 class="card-title">Furniture</h5>
       <p class="card-text">Find exactly what you're looking for!</p>
-      <a href="#" class="btn btn-primary">Browse Furniture</a>
->>>>>>> da09c8ec98cf59de9a117e9ad396a86cf54e6ec6
+      <a href="/shop/Furniture" class="btn btn-primary">Browse Furniture</a>
     </div>
   </div>
 
@@ -193,7 +88,7 @@
     <div class="card-body">
       <h5 class="card-title">Strollers</h5>
       <p class="card-text">Go mobile with one of our strollers!</p>
-      <a href="#" class="btn btn-primary">Browse Strollers</a>
+      <a href="/shop/Strollers" class="btn btn-primary">Browse Strollers</a>
     </div>
   </div>
 </div>
