Side bar, footer, formatting

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 .welcome {
-  width: 210px;
+  width: 250px;
   float: left;
   text-align: left;
 }
@@ -27,6 +27,71 @@
 .cart {
   width: 49%;
   height: 50%;
+}
+
+/* Side Menu */
+/* The side navigation menu */
+.sidenav {
+  height: 100%;
+  /* 100% Full-height */
+  width: 0;
+  /* 0 width - change this with JavaScript */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Stay on top */
+  top: 0;
+  /* Stay at the top */
+  left: 0;
+  background-color: #111;
+  /* Black*/
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  padding-top: 60px;
+  /* Place content 60px from the top */
+  transition: 0.5s;
+  /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 
 /* Login form hidden by default */
@@ -70,7 +135,8 @@
   padding: 32px;
 }
 
-input[type=text], input[type=password] {
+input[type=text],
+input[type=password] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -148,4 +214,35 @@ input[type=text], input[type=password] {
   height: 200px;
   background: transparent no-repeat center;
   background-size: cover;
+}
+
+.shopItems {
+  width: 60%;
+  margin: auto;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.shopItem {
+  width: 25%;
+  display: inline-block;
+  border-style: solid;
+}
+
+.shopItem p {
+  margin: 0;
+}
+
+.shopItem {
+  padding: 8px;
+}
+
+.itemImage {
+  height: 100px;
+}
+
+/* footer */
+
+footer {
+  text-align: center;
 }
