--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,9 @@
 </body>
 
 <footer>
-  <p>contact</p>
+  <div class="footer">
+    <p>contact</p>
+  </div>
   <p>© Zachary Inserra</p>
 </footer>
 
