--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -55,9 +55,20 @@
     </div>
   </div>
 
+  <!-- Side Menu -->
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+  </div>
+
+
   <div class="header">
     <div class="welcome">
-      <h2>Baby Thrift</h2>
+      <button class="btn btn-dark btn-lg" onclick="openNav()">[]</button>
+      <button class="btn btn-light btn-lg" href="/">Baby Thrift</button>
     </div>
 
     <!-- Search Bar -->
