Used multer and fs to upload images to s3 bucket

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -260,7 +260,10 @@ input[type="file"] {
 
 #images {
   display: none;
-  height: 300px;
+  max-height: 300px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
 }
 
 .product-images {
