--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -74,12 +74,12 @@
     <!-- Search Bar -->
     <div class="input-group mb-3">
       <div class="input-group-prepend">
-        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All</button>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <a class="dropdown-item" href="#">Separated link</a>
+          <a class="dropdown-item" href="#">Clothing</a>
+          <a class="dropdown-item" href="#">Toys</a>
+          <a class="dropdown-item" href="#">Furniture</a>
+          <a class="dropdown-item" href="#">Strollers</a>
         </div>
       </div>
       <input type="text" class="form-control" aria-label="Text input with dropdown button" style="margin-top: 0">
