--- a/views/item-upload.ejs
+++ b/views/item-upload.ejs
@@ -14,13 +14,22 @@
 </div>
 </div>
 
+<!-- Progress bar -->
+<div class="progress" style="height: 3px;">
+    <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0"
+        aria-valuemax="100"></div>
+</div>
 
 <div class="itemDetails">
     <form action="databaseAdd" method="POST" enctype="multipart/form-data">
         <!-- <form> -->
         <div class="form-group">
             <label for="name">Name of item:</label>
-            <input name="nameOfItem" type="text" class="form-control" id="name" placeholder="" required>
+            <input name="nameOfItem" type="text" class="form-control" id="name" required>
+        </div>
+        <div class="form-group">
+            <label for="description">Description:</label>
+            <textarea name="descriptionOfItem" class="form-control" id="description" rows="3" required></textarea>
         </div>
         <div class="form-group">
             <label for="type">Type of item:</label><br>
@@ -33,14 +42,15 @@
         </div>
         <div class="form-group">
             <label class="btn btn-primary btn-lg" for="image-file">Upload Images</label>
-            <input class="custom-file-upload" type="file" id="image-file" name="itemImages" accept="images/*" multiple required>
+            <input class="custom-file-upload" type="file" id="image-file" name="itemImages" accept="images/*" multiple
+                required>
         </div>
         <div id="images">
             <!-- Uhhhhhhh images  -->
         </div>
         <div class="form-group">
             <label for="manufacturer">Manufacturer (if applciable):</label>
-            <input name="manufacturerOfItem" type="text" class="form-control" id="manufacturer" placeholder="" required>
+            <input name="manufacturerOfItem" type="text" class="form-control" id="manufacturer" required>
         </div>
         <div class="form-group">
             <label for="price">Asking price:</label>
