--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,6 +7,7 @@
   <p>© Zachary Inserra</p>
 
   <script src="../js/eventListeners.js"></script>
+  <script src="../js/index.js"></script>
 </footer>
 
 </html>
