--- a/views/item-upload.ejs
+++ b/views/item-upload.ejs
@@ -46,7 +46,9 @@
                 required>
         </div>
         <div id="images">
-            <!-- Uhhhhhhh images  -->
+            <div class="images-placeholder">
+                Upload at least one image of your item
+            </div>
         </div>
         <div class="form-group">
             <label for="manufacturer">Manufacturer (if applciable):</label>
