--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -66,7 +66,7 @@
   <div class="header">
     <div class="welcome">
       <button class="btn btn-dark btn-lg" onclick="openNav()">[]</button>
-      <button class="btn btn-light btn-lg" href="/">Baby Thrift</button>
+      <a class="btn btn-light btn-lg" href="/">Baby Thrift</a>
     </div>
 
     <!-- Search Bar -->
