--- a/views/upload-success.ejs
+++ b/views/upload-success.ejs
@@ -2,6 +2,7 @@
 
 <!-- Register/Login/Cart -->
 <div class="register">
+
   <% if (check) { %>
   <a class="btn btn-light btn-med" href="/account" role="button">Account</a>
   <a class="btn btn-dark btn-med" href="/logout" role="button">Logout</button>
@@ -15,14 +16,20 @@
 </div>
 
 
+<div class="uploaded-item-head">
+  <h1>Item uploaded successfully.</h1>
+</div>
 
 <div class="item-display">
   <div class="picture">
-    <img class="displayed-image" src="https://kuiperbeltofbabies.s3.us-east-2.amazonaws.com/item-images/<%= itemPics[0] %>" alt="">
+    <img class="displayed-image"
+      src="https://kuiperbeltofbabies.s3.us-east-2.amazonaws.com/item-images/<%= itemPics[0] %>" alt="">
     <div class="other-pictures">
-      <img onclick="setMainImage(this)" class="tiny-images selected-image" src="https://kuiperbeltofbabies.s3.us-east-2.amazonaws.com/item-images/<%= itemPics[0] %>" alt="">
+      <img onclick="setMainImage(this)" class="tiny-images selected-image"
+        src="https://kuiperbeltofbabies.s3.us-east-2.amazonaws.com/item-images/<%= itemPics[0] %>" alt="">
       <% for (i = 1; i < itemPics.length; i++) { %>
-      <img onclick="setMainImage(this)" class="tiny-images" src="https://kuiperbeltofbabies.s3.us-east-2.amazonaws.com/item-images/<%= itemPics[i] %>" alt="">
+      <img onclick="setMainImage(this)" class="tiny-images"
+        src="https://kuiperbeltofbabies.s3.us-east-2.amazonaws.com/item-images/<%= itemPics[i] %>" alt="">
       <% } %>
     </div>
   </div>
@@ -35,6 +42,12 @@
     <h6><%= itemCity %>, <%=itemState %></h6>
     <h6><%= itemDesc %></h6>
   </div>
+</div>
+
+<div class="uploaded-item-foot">
+  <a class="btn btn-light btn-med" href="/item/<%= itemID %>">View Item</a>
+  <a class="btn btn-light btn-med" href="/account">View Account</a>
+  <a class="btn btn-light btn-med" href="/">Return Home</a>
 </div>
 
 <%- include('partials/footer') %>
