--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -280,10 +280,21 @@ input[type="file"] {
 }
 
 .product-images {
-  /* width: 200px; */
   height: 300px;
-  padding-right: 15px;
-  padding-bottom: 15px;
+}
+
+.image-remove-overlay {
+  display: inline-block;
+  height: 300px;
+  position: relative;
+}
+
+.btn-image-delete {
+  width: 70px;
+  height: 30px;
+  top: 10px;
+  right: 10px;
+  position: absolute;
 }
 
 /* Account page */
