--- a/views/item-upload.ejs
+++ b/views/item-upload.ejs
@@ -21,7 +21,7 @@
 </div>
 
 <div class="itemDetails">
-    <form action="databaseAdd" method="POST" enctype="multipart/form-data">
+    <form action="database-add" method="POST" enctype="multipart/form-data">
         <div class="form-group">
             <label for="name">Name of item:</label>
             <input name="nameOfItem" type="text" class="form-control" id="name" required>
