--- a/views/account.ejs
+++ b/views/account.ejs
@@ -42,27 +42,31 @@
 </div>
 <div class="recent-items">
     <div class="account-user-item">
-        <% itemList.forEach(function(item) { %>
-        <a class="account-shop-item-links" href="/item/<%= item.id %>">
+        <% for (i = 0; i < 3; i++) { %>
+        <div class="account-shop-item-links">
             <div class="account-shop-item">
-                <div class="itemTitle">
-                    <p><%= item.name %></p>
+                <div class="item-title">
+                    <a href="/item/<%= itemList[i].id %>">
+                        <p><%= itemList[i].name %></p>
+                    </a>
+                    <a class="settings" href="/edit-item/<%= itemList[i].id %>">cong.png</a>
+                    <!-- button onclick="enablePopover(this)" data-placement="bottom" type="button" data-toggle="popover" data-html="true" data-original-title="Edit" data-content="Edit">cog.png</button> -->
                 </div>
-                <div class="itemImage">
-                    <img src="https://kuiperbeltofbabies.s3.us-east-2.amazonaws.com/item-images/<%= item.picture.toString().split(";")[0] %>"
+                <a class="itemImage" href="/item/<%= itemList[i].id %>">
+                    <img src="https://kuiperbeltofbabies.s3.us-east-2.amazonaws.com/item-images/<%= itemList[i].picture.toString().split(";")[0] %>"
                         alt="picture">
-                </div>
+                </a>
                 <div>
-                    <p>$<%= item.price %></p>
+                    <p>$<%= itemList[i].price %></p>
                     <hr>
                     <p><b>Seller:</b> Yo mama</p>
-                    <p><b>Location:</b> <%= item.city %>, <%= item.state %></p>
+                    <p><b>Location:</b> <%= itemList[i].city %>, <%= itemList[i].state %></p>
                 </div>
             </div>
-        </a>
-        <% }); %>
+        </div>
+        <% } %>
     </div>
-    <button class="expand-button">View of your items</button>
+    <button class="expand-button">View all of your items</button>
 </div>
 <!-- </div> -->
 
