--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,16 +8,11 @@
   <!-- Javascript -->
   <script src="../js/jquery-3.5.1.min.js"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/styles.css">
 
 </head>
@@ -30,7 +25,7 @@
       <form action="/login" method="POST">
         <div class="avatar">
           <p>pic of ur ugly face goes here</p>
-          <img src="images/baby1.jpg">
+          <img src="">
         </div>
 
         <div class="container">
@@ -75,23 +70,18 @@
     </div>
 
     <!-- Search Bar -->
-    <form class="input-group mb-3" action="search-results" method="POST">
+    <div class="input-group mb-3">
       <div class="input-group-prepend">
-        <select name="category" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-          aria-expanded="false">
-          <option value="All">All</option>
-          <option value="Clothing">Clothing</option>
-          <option value="Furniture">Furniture</option>
-          <option value="Toys">Toys</option>
-          <option value="Stroller">Stroller</option>
-        </select>
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All</button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Clothing</a>
+          <a class="dropdown-item" href="#">Toys</a>
+          <a class="dropdown-item" href="#">Furniture</a>
+          <a class="dropdown-item" href="#">Strollers</a>
+        </div>
       </div>
-      <% if (locals.placeholder) { %>
-        <input value="<%= placeholder %>" name="searchText" type="text" class="form-control" style="margin-top: 0">
-      <% } else { %>
-        <input name="searchText" type="text" class="form-control" style="margin-top: 0">
-      <% } %>
+      <input type="text" class="form-control" aria-label="Text input with dropdown button" style="margin-top: 0">
       <div class="input-group-append">
-        <button class="btn btn-outline-secondary" id="button-addon2">Search</button>
+        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
       </div>
-    </form>
+    </div>
