--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -397,7 +397,7 @@ input[type="file"] {
   padding: 32px;
 }
 
-/* Item upload success page */
+/* Item upload success page and delete item success page*/
 
 .uploaded-item-head {
   width: 1000px;
@@ -411,6 +411,13 @@ input[type="file"] {
   margin: auto;
   padding: 50px 0;
   text-align: center;
+}
+
+/* Account settings page */
+
+.setting-blocks {
+  width: 1000px;
+  margin: auto;
 }
 
 /* footer */
