users can add and view addresses

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -420,6 +420,12 @@ input[type="file"] {
   margin: auto;
 }
 
+.address-form {
+  display: none;
+  width: 800px;
+  margin: auto;
+}
+
 /* footer */
 
 footer {
