--- a/views/account-settings.ejs
+++ b/views/account-settings.ejs
@@ -15,13 +15,40 @@
 
 
 <div class="setting-blocks">
-    Addresses
+    <h1>Your Addresses</h1>
+
+    <% addressList.forEach(function(addy) { %>
+        <h6><b><%= addy.fullname %></b></h6>
+        <h6><%= addy.address1 %> <%=addy.address2 %></h6>
+        <h6><%= addy.city %>  <%= addy.state %>, <%= addy.zip %></h6>
+    <% }); %>
+
+    <button onclick="toggleAddAddress()">Add new address</button>
+    <form class="address-form" method="POST" action="address-add">
+        <div class="form-group">
+            <label for="fullname">Full Name:</label>
+            <input name="fullname" type="text" class="form-control" id="fullname" required>
+            <label for="address1">Address Line 1:</label>
+            <input name="address1" type="text" class="form-control" id="address1" placeholder="Street address, PO Box, Company name" required>
+            <label for="address2">Address Line 2:</label>
+            <input name="address2" type="text" class="form-control" id="address2" placeholder="Apartment, suite, unit, building, etc.">
+            <label for="city">City:</label>
+            <input name="city" type="text" class="form-control" id="city" required>
+            <label for="state">State:</label>
+            <input name="state" type="text" class="form-control" id="state" required>
+            <label for="zipcode">Zip Code:</label>
+            <input name="zipcode" type="text" class="form-control" id="zipcode" required>
+        </div>
+        <button type="submit" id="add-address" class="btn btn-primary btn-lg btn-block">Add Address</button>
+    </form>
 </div>
+
 <div class="setting-blocks">
-    Payment Methods
+    <h1>Payment Methods</h1>
 </div>
+
 <div class="setting-blocks">
-    Notification Preferences
+    <h1>Notification Preferences</h1>
 </div>
 
 
