--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -17,13 +17,15 @@
 
 
 <!-- Display items for mf shopping -->
-<div class="shopItems">
+<div class="shop-items">
   <% try { %>
-  <h3><%= itemType %></h3>
+  <div class="shop-filters">
+    <p><%= itemType %></p>
+  </div>
   <% } catch {} %>
   <% itemList.forEach(function(item) { %>
-  <a class="shopItemLinks" href="/item/<%= item.id %>">
-    <div class="shopItem">
+  <a class="shop-item-links" href="/item/<%= item.id %>">
+    <div class="shop-item">
       <div class="itemTitle">
         <p><%= item.name %></p>
       </div>
@@ -37,6 +39,9 @@
         <hr>
         <p><b>Seller:</b> Yo mama</p>
         <p><b>Location:</b> <%= item.city %>, <%= item.state %></p>
+      </div>
+      <div class="shop-item-overlay">
+        <button>View Details</button>
       </div>
     </div>
   </a>
