--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -70,8 +70,12 @@
 
   <div class="header">
     <div class="welcome">
-      <button class="btn btn-dark btn-lg" onclick="openNav()">[]</button>
-      <a class="btn btn-light btn-lg" href="/">Baby Thrift</a>
+      <div class="btn-hamburger">
+        <button class="btn btn-dark btn-med" onclick="openNav()">[]</button>
+      </div>
+      <div class="btn-bb">
+        <a class="btn btn-light btn-med" href="/">Baby Thrift</a>
+      </div>
     </div>
 
     <!-- Search Bar -->
@@ -95,3 +99,26 @@
         <button class="btn btn-outline-secondary" id="button-addon2">Search</button>
       </div>
     </form>
+
+    <!-- Register/Login/Cart -->
+    <div class="register">
+      <% if (check) { %>
+      <div class="btn-account">
+        <a class="btn btn-light btn-med" href="/account" role="button">Account</a>
+      </div>
+      <div class="btn-logout">
+        <a class="btn btn-dark btn-med" href="/logout" role="button">Logout</button>
+      </div>
+      <% } else { %>
+      <div class="btn-register">
+        <a class="btn btn-light btn-med" href="/register" role="button">Register</a>
+      </div>
+      <div class="btn-login">
+        <button class="btn btn-dark btn-med" onclick="openLogin()">Login</button>
+      </div>
+      <% } %>
+      <div class="btn-cart">
+        <a class="btn btn-light btn-med" href="#" role="button">CART</a>
+      </div>
+    </div>
+  </div>
