USD for the products

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -107,14 +107,14 @@
         <a class="btn btn-light btn-med" href="/account" role="button">Account</a>
       </div>
       <div class="btn-logout">
-        <a class="btn btn-dark btn-med" href="/logout" role="button">Logout</button>
+        <a class="btn btn-dark btn-med" href="/logout" role="button">Logout</a>
       </div>
       <% } else { %>
       <div class="btn-register">
         <a class="btn btn-light btn-med" href="/register" role="button">Register</a>
       </div>
       <div class="btn-login">
-        <button class="btn btn-dark btn-med" onclick="openLogin()">Login</button>
+        <a class="btn btn-dark btn-med" role="button" onclick="openLogin()">Login</a>
       </div>
       <% } %>
       <div class="btn-cart">
