--- a/views/item-upload.ejs
+++ b/views/item-upload.ejs
@@ -1,19 +1,5 @@
 <%- include('partials/header') %>
 
-<!-- Register/Login/Cart -->
-<div class="register">
-    <% if (check) { %>
-    <a class="btn btn-light btn-med" href="/account" role="button">Account</a>
-    <a class="btn btn-dark btn-med" href="/logout" role="button">Logout</button>
-        <% } else { %>
-        <a class="btn btn-light btn-med" href="/register" role="button">Register</a>
-        <button class="btn btn-dark btn-med" onclick="openLogin()">Login</button>
-        <% } %>
-
-        <a class="btn btn-light btn-med" href="#" role="button">CART</a>
-</div>
-</div>
-
 <!-- Progress bar -->
 <div class="progress" style="height: 3px;">
     <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0"
@@ -54,8 +40,8 @@
             <input name="manufacturerOfItem" type="text" class="form-control" id="manufacturer" required>
         </div>
         <div class="form-group">
-            <label for="price">Asking price:</label>
-            <input name="priceOfItem" type="text" class="form-control" id="price" placeholder="" required>
+            <label for="price">Asking price: (USD)</label>
+            <input name="priceOfItem" type="text" class="form-control" id="price" placeholder="$" required>
         </div>
         <div class="form-group">
             <label for="city">City, State</label>
